--- a/test/fixtures/customers.yml
+++ b/test/fixtures/customers.yml
@@ -1,8 +1,8 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
-one:
+test:
   name: MyString
-  email: MyString
+  email: test@example.com
 
 two:
   name: MyString
